// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser errors when namespace with no block 1`] = `
"Parsing Error:
Unexpected end of file
Line: undefined
Column: undefined"
`;

exports[`parser errors when no parameters section in a function 1`] = `
"Parsing Error:
Unexpected symbol. Expected one of '(' but received ':'
Line: 1
Column: 9"
`;

exports[`parser errors when spaces in a namespace name 1`] = `
"Parsing Error:
Unexpected symbol. Expected one of '{', '.' but received 'Name'
Line: 0
Column: 15"
`;

exports[`parser parses a empty exported schema 1`] = `
[
  {
    "contents": [
      {
        "exported": true,
        "location": {
          "last": {
            "column": 15,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "name": "Test",
        "properties": [],
        "type": "schema_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a empty file 1`] = `[]`;

exports[`parser parses a empty function 1`] = `
[
  {
    "contents": [
      {
        "content": [],
        "exported": false,
        "location": {
          "last": {
            "column": 4,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "parameters": [],
        "returns": {
          "location": {
            "last": {
              "column": 16,
              "line": 1,
            },
            "start": {
              "column": 13,
              "line": 1,
            },
          },
          "name": "int",
          "type": "reference_type",
        },
        "type": "function_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a empty function with a single parameter 1`] = `
[
  {
    "contents": [
      {
        "content": [],
        "exported": false,
        "location": {
          "last": {
            "column": 4,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "parameters": [
          {
            "location": {
              "last": {
                "column": 15,
                "line": 1,
              },
              "start": {
                "column": 11,
                "line": 1,
              },
            },
            "name": "test",
            "type": "function_parameter",
          },
        ],
        "returns": {
          "location": {
            "last": {
              "column": 27,
              "line": 1,
            },
            "start": {
              "column": 24,
              "line": 1,
            },
          },
          "name": "int",
          "type": "reference_type",
        },
        "type": "function_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a empty function with multiple parameters 1`] = `
[
  {
    "contents": [
      {
        "content": [],
        "exported": false,
        "location": {
          "last": {
            "column": 4,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "parameters": [
          {
            "location": {
              "last": {
                "column": 15,
                "line": 1,
              },
              "start": {
                "column": 11,
                "line": 1,
              },
            },
            "name": "test",
            "type": "function_parameter",
          },
          {
            "location": {
              "last": {
                "column": 28,
                "line": 1,
              },
              "start": {
                "column": 23,
                "line": 1,
              },
            },
            "name": "other",
            "type": "function_parameter",
          },
        ],
        "returns": {
          "location": {
            "last": {
              "column": 40,
              "line": 1,
            },
            "start": {
              "column": 37,
              "line": 1,
            },
          },
          "name": "int",
          "type": "reference_type",
        },
        "type": "function_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a empty function with no return type 1`] = `
[
  {
    "contents": [
      {
        "content": [],
        "exported": false,
        "location": {
          "last": {
            "column": 4,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "parameters": [],
        "returns": null,
        "type": "function_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a empty namespace 1`] = `
[
  {
    "contents": [],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a empty public struct 1`] = `
[
  {
    "contents": [
      {
        "exported": true,
        "location": {
          "last": {
            "column": 15,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "name": "Test",
        "properties": [],
        "type": "struct_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a empty schema 1`] = `
[
  {
    "contents": [
      {
        "exported": false,
        "location": {
          "last": {
            "column": 8,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "properties": [],
        "type": "schema_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a empty struct 1`] = `
[
  {
    "contents": [
      {
        "exported": false,
        "location": {
          "last": {
            "column": 8,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "properties": [],
        "type": "struct_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a exported empty function 1`] = `
[
  {
    "contents": [
      {
        "content": [],
        "exported": true,
        "location": {
          "last": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "name": "Test",
        "parameters": [],
        "returns": {
          "location": {
            "last": {
              "column": 24,
              "line": 1,
            },
            "start": {
              "column": 21,
              "line": 1,
            },
          },
          "name": "int",
          "type": "reference_type",
        },
        "type": "function_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a exported namespace 1`] = `
[
  {
    "contents": [],
    "exported": true,
    "location": {
      "last": {
        "column": 16,
        "line": 0,
      },
      "start": {
        "column": 7,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a schema with a single property 1`] = `
[
  {
    "contents": [
      {
        "exported": false,
        "location": {
          "last": {
            "column": 8,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "properties": [
          {
            "location": {
              "last": {
                "column": 8,
                "line": 2,
              },
              "start": {
                "column": 4,
                "line": 2,
              },
            },
            "name": "test",
            "type": "property",
          },
        ],
        "type": "schema_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a schema with two parameters 1`] = `
[
  {
    "contents": [
      {
        "exported": false,
        "location": {
          "last": {
            "column": 8,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "properties": [
          {
            "location": {
              "last": {
                "column": 8,
                "line": 2,
              },
              "start": {
                "column": 4,
                "line": 2,
              },
            },
            "name": "test",
            "type": "property",
          },
          {
            "location": {
              "last": {
                "column": 9,
                "line": 3,
              },
              "start": {
                "column": 4,
                "line": 3,
              },
            },
            "name": "other",
            "type": "property",
          },
        ],
        "type": "schema_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a struct with a single property 1`] = `
[
  {
    "contents": [
      {
        "exported": false,
        "location": {
          "last": {
            "column": 8,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "properties": [
          {
            "location": {
              "last": {
                "column": 8,
                "line": 2,
              },
              "start": {
                "column": 4,
                "line": 2,
              },
            },
            "name": "test",
            "type": "property",
          },
        ],
        "type": "struct_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a struct with two properties 1`] = `
[
  {
    "contents": [
      {
        "exported": false,
        "location": {
          "last": {
            "column": 8,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Test",
        "properties": [
          {
            "location": {
              "last": {
                "column": 8,
                "line": 2,
              },
              "start": {
                "column": 4,
                "line": 2,
              },
            },
            "name": "test",
            "type": "property",
          },
          {
            "location": {
              "last": {
                "column": 9,
                "line": 3,
              },
              "start": {
                "column": 4,
                "line": 3,
              },
            },
            "name": "other",
            "type": "property",
          },
        ],
        "type": "struct_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;

exports[`parser parses a using entity 1`] = `
[
  {
    "contents": [
      {
        "exported": false,
        "location": {
          "last": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
          },
        },
        "name": "Other",
        "type": "using_entity",
      },
    ],
    "exported": false,
    "location": {
      "last": {
        "column": 9,
        "line": 0,
      },
      "start": {
        "column": 0,
        "line": 0,
      },
    },
    "name": "Test",
    "type": "namespace",
  },
]
`;
